--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,190 @@
-*,*::before,*::after{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	height: 100vh;
+	background: #faf3e6;
+}
+
+header {
+	width: calc(100% - (100vw - 100%));
+	position: fixed;
+
+	nav {
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		background: #fdeac6;
+		border-bottom: 1px solid rgba(#000000, 0.2);
+
+		a {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-around;
+
+			font-size: 1.5rem;
+			text-decoration: none;
+			color: black;
+
+			&:hover {
+				text-decoration: underline;
+			}
+
+			img {
+				height: 4rem;
+				padding: 0.5rem;
+
+				&:hover,
+				&:focus {
+					opacity: 0.5;
+				}
+			}
+		}
+	}
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+
+	.homeSection {
+		width: 80%;
+		margin: 0 auto;
+		display: block;
+
+		&:nth-child(1) {
+			margin-top: 5rem;
+		}
+
+		h2 {
+			font-size: 1.2rem;
+			padding: 1rem;
+		}
+
+		p {
+			padding: 0 1rem;
+		}
+	}
+
+	.team {
+		.teamLead {
+			h2,
+			p {
+				text-align: center;
+				padding: 1rem;
+			}
+		}
+
+		&:nth-child(1) {
+			margin-top: 5rem;
+		}
+
+		ul {
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			align-items: center;
+
+			li {
+				width: 80%;
+				display: flex;
+				flex-direction: row;
+
+				&:nth-child(odd) {
+					background: #fdeac6;
+				}
+
+				.bakkers {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					flex-direction: column;
+
+					margin: 2rem;
+
+					img {
+						height: 8rem;
+						width: 8rem;
+						object-fit: cover;
+					}
+					h5 {
+						text-align: center;
+						padding: 1rem;
+					}
+				}
+
+				.bakkersInfo {
+					margin: 2rem;
+				}
+			}
+		}
+	}
+
+	.bestellen {
+		width: 80%;
+		margin: 6rem auto;
+
+		h2,
+		p {
+			text-align: center;
+		}
+
+		h2 {
+			margin-bottom: 1rem;
+		}
+
+		form {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			margin-top: 1rem;
+
+			input[type="number"] {
+				margin-bottom: 1rem;
+			}
+
+			input[type="file"] {
+				margin-top: 0.5rem;
+			}
+
+			button {
+				margin: 1rem;
+				padding: 0.5rem 1rem;
+			}
+		}
+	}
+
+	.contact {
+		width: 80%;
+		margin: 6rem auto 2rem auto;
+
+		display: flex;
+
+		.info {
+			height: calc(100vh - 8rem);
+			width: 400px;
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-end;
+
+			margin-right: 4rem;
+
+			ul {
+				list-style: none;
+
+				li {
+					text-decoration: none;
+				}
+			}
+		}
+	}
 }
